# Matmorpher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/: CMakeLists.txt
libs/ann_1.1.2/: CMakeLists.txt  ReadMe.txt
libs/ann_1.1.2/MS_Win32/: Ann.sln
libs/ann_1.1.2/include/ANN/: ANN.h
libs/ann_1.1.2/src/: CMakeLists.txt
libs/mikktspace/: CMakeLists.txt  mikktspace.h
libs/smooth_contours_1.0/: CMakeLists.txt  Makefile  README.txt  io.c  io.h  smooth_contours.c  smooth_contours_cmd.c
libs/stb_image/: CMakeLists.txt  stb_image.c
src/: CMakeLists.txt  main.cpp
src/GifCreator/: GifMainWindow.cpp  GifMainWindow.h  GifViewerWidget.cpp  GifViewerWidget.h  mainGifCreator.cpp
src/Rendering/: Debug.cpp  Debug.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SceneState.h  Shader.cpp  Shader.h  Viewer.cpp  Viewer.h
src/Utils/: AlignedBox.cpp  AlignedBox.h  Camera.cpp  Camera.h  Color.cpp  Color.h  CompassOperator.h  Contours.cpp  Contours.h  Histogram.cpp  Histogram.h  MathUtils.cpp  MathUtils.h  NormalReorientation.cpp  NormalReorientation.h  TangentSpace.cpp  TangentSpace.h
src/Warpgrid/: KDTree.h  LinearSystem.h  Mat2.h  Solver.cpp  Solver.h  Vec2.h  WarpIO.cpp  WarpIO.h  WarpTextureDesign.cpp  WarpTextureDesign.h  WarpUtils.cpp  WarpUtils.h  Warpgrid.cpp  Warpgrid.h  warpgrid_cmd.cpp
src/Window/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  ViewerWidget.cpp  ViewerWidget.h
src/assets/: .gitattributes
src/assets/envmap/: m0_nx.hdr  m0_nz.hdr  m1_nx.hdr  m1_ny.hdr  m1_nz.hdr  m1_px.hdr  m1_py.hdr  m1_pz.hdr  m2_nx.hdr  m2_ny.hdr  m2_nz.hdr  m2_px.hdr  m2_py.hdr  m2_pz.hdr  m3_nx.hdr  m3_ny.hdr  m3_nz.hdr  m3_px.hdr  m3_py.hdr  m3_pz.hdr  m4_nx.hdr  m4_ny.hdr  m4_nz.hdr  m4_px.hdr  m4_py.hdr  m4_pz.hdr  ny.hdr  px.hdr  py.hdr  pz.hdr  sh.txt
src/shaders/: gaussianization.comp  gbuffer.frag  matmorpher.frag  matmorpher.tesc  matmorpher.tese  matmorpher.vert  normal.comp  screen.frag  screen.vert  ssao.frag  ssao.vert  ssao_blur.frag
